# py_statements_parser

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_ipay.md  README_ipay_patterns.md  config.yaml.example  demo_rename_organize.py  env.example  main.py  parse_all_pdfs.py  parse_pdfs_with_patterns.py  pyproject.toml  typos.toml
examples/: README.md  __init__.py  demo_rename_organize.py
examples/basic/: __init__.py  rename_files_example.py
scripts/: README_totals.md  __init__.py  assert_pay_summaries.sh  bump_version.sh  bump_version_simple.py  generate_totals.sh  reset_database.py  run_ipay_import-test.sh  run_ipay_import.sh  setup.py
src/py_statements_parser/: __init__.py  main.py
src/py_statements_parser/core/: __init__.py  config.py  database.py  processor.py
src/py_statements_parser/core/institutions/: __init__.py  base.py  cash_app.py  first_energy.py  icici.py  ipay.py  robinhood.py
src/py_statements_parser/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_main.py
